syntax = "proto3";

import "error.proto";
import "user.proto";

package healthdb;
option go_package = "github.com/paralaxrus/health-project/dbsvc/proto;proto";

message RegisterRequest {
  string name = 1;
  string email = 2;
}

message RegisterResponse {
  string id = 1;
  ErrorMsg err_msg = 2;
}

message FindRequest {
  oneof kind {
    string id = 1;
    string email = 2;
  }
}

message FindResponse {
  User user = 1;
  ErrorMsg err_msg = 2;
}

service UserService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Find (FindRequest) returns (FindResponse);
}